--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@ repository: Git repository where your resume will be hosted, only required if yo
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
 # Personal info
-name: Collin
-title: Materials Engineer
+name: Collin Cao
+title: Master of Engineering (Materials) University of Melbourne
 email: colawithrain@gmail.com
 phone: Your phone number (optional)
-website: Your website (eg. https://google.com)(optional)
+website: https://google.com
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: true
 
 # Social links
 twitter_username: jekyllrb
@@ -44,7 +44,7 @@ additional_links:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Images/000034.jpg
+about_profile_image: Images/000034.jpg # My profile picture
 about_content: | # this will include new lines to allow paragraphs
   Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
 
