--- a/original_template/_config.yml
+++ b/original_template/_config.yml
@@ -3,14 +3,14 @@ repository: Git repository where your resume will be hosted, only required if yo
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
 # Personal info
-name: Collin Cao
-title: Master of Engineering (Materials) University of Melbourne
-email: colawithrain@gmail.com
+name: Your Name
+title: Your job title
+email: Your email (optional)
 phone: Your phone number (optional)
-website: https://google.com
+website: Your website (eg. https://google.com)(optional)
 
 # Dark Mode (true/false/never)
-darkmode: true
+darkmode: false
 
 # Social links
 twitter_username: jekyllrb
@@ -44,9 +44,8 @@ additional_links:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Images/000034.jpg # My profile picture
+about_profile_image: Directory of profile image (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
-  Hi, I am Colin from Inner-Mongolia, a big fan of noodles
   Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
 
   You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
@@ -62,7 +61,7 @@ about_content: | # this will include new lines to allow paragraphs
 # experience_title: Experience #(Use this to override about experience section title)
 
 # Education Section
-# education_title: Communication #(Use this to override about education section title)
+# education_title: Education #(Use this to override about education section title)
 
 # More Section
 # more_title: A Little More About Me #(Use this to override about more section title)
