--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ about_content: | # this will include new lines to allow paragraphs
     - Lists
     - Tables
     - <a href="google.com">Links</a>
-    - Images
+    - Images/000034.jpg
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
