--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ about_content: | # this will include new lines to allow paragraphs
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
 
-# Intership Section
+# Experience Section
 # experience_title: Experience #(Use this to override about experience section title)
 
 # Education Section
