--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,8 +1,8 @@
 # Education Template
 - layout: left
-  name: Institution name
-  dates: Date Range (eg. 2016 - 2019)
-  qualification: Qualifications (eg. BA Performing Arts)
+  name: The University of Melbourne
+  dates: 2019 - present
+  qualification: Master of Engineering (Materials)
   quote: >
     Short institution or course description (optional)
   description: | # this will include new lines to allow paragraphs
