--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ orcid_username: 0000-0000-0000-0000
 additional_links:
 - title: Link name
   icon: Font Awesome brand icon name (eg. fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-  url: Link url (eg. https://google.com)
+  url: Link url (eg. https://www.google.com)
 # - title: another link
 #   icon: font awesome brand icon name (eg. fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
@@ -47,8 +47,8 @@ additional_links:
 # about_title: About Me (Use this to override about section title)
 about_profile_image: Images/000034.jpg # My profile picture
 about_content: | # this will include new lines to allow paragraphs
-  Hi, I am Colin from Inner-Mongolia, a big fan of noodles
-  So happy to let you guys know me
+  Hi, I am Colin from Inner-Mongolia, a big fan of noodles |
+  So happy to let you guys know me | 
   Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
 
   You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
